@@ -50,10 +50,22 @@ mt_ctw_set_clicktype (guint clicktype)
 void
 mt_ctw_update_visibility (MTClosure *mt)
 {
-    if (mt->dwell_enabled && mt->dwell_show_ctw)
-	gtk_widget_show (WID ("ctw"));
-    else
-	gtk_widget_hide (WID ("ctw"));
+    GtkWidget *ctw;
+    GdkScreen *screen;
+
+    ctw = mt_ctw_get_window ();
+
+    if (mt->dwell_enabled && mt->dwell_show_ctw) {
+	if (mt->n_screens > 1) {
+	    gdk_display_get_pointer (gdk_display_get_default (),
+				     &screen, NULL, NULL, NULL);
+	    gtk_window_set_screen (GTK_WINDOW (ctw), screen);
+	}
+	gtk_widget_show (ctw);
+    }
+    else {
+	gtk_widget_hide (ctw);
+    }
 }
 
 void
