@@ -20,6 +20,7 @@
 #ifndef __MT_MAIN_H__
 #define __MT_MAIN_H__
 
+#include <gdk/gdkx.h>
 #include <gconf/gconf-client.h>
 
 #include "mt-timer.h"
@@ -35,6 +36,9 @@ struct _MTClosure {
     MtTimer     *delay_timer;
     MtTimer     *dwell_timer;
     MtCursor    *cursor;
+
+    Display *xtst_display;
+    gint     n_screens;
 
     gboolean dwell_drag_started;
     gboolean dwell_gesture_started;
